--- a/package.yaml
+++ b/package.yaml
@@ -20,10 +20,130 @@ extra-source-files:
 description:         Please see the README on GitHub at <https://github.com/githubuser/fcl-repo#readme>
 
 dependencies:
-- base >= 4.7 && < 5
+  - base >= 4.7 && < 5
+  - protolude
+  - text
+  - array
+  - deepseq
+  - directory
+  - filepath
+  - unix
+  - array
+  - pretty-show
+  - safe
+  - scientific
+  - filelock
+  - ansi-terminal
+  - rank1dynamic
+  - lattices
+  - memory
+
+  # Serialization
+  - cereal
+  - cereal-text
+  - binary
+  - aeson
+  - aeson-pretty
+  - pretty-hex
+
+    # Control Structures
+  - mtl >= 2.2
+  - transformers >= 0.5.3.0
+  - transformers-base
+  - monad-control
+  - lifted-base
+  # Date & Time
+  - time
+  - datetimes
+  - hourglass
+  # Text
+  - text
+  - bytestring
+  - parsec
+  - attoparsec
+  - wl-pprint-text
+  - base58-bytestring
+
+  # Data Structures
+  - containers
+  - hashable
+  - unordered-containers
+
+  # Persistence
+  - postgresql-simple
+
+  # Cryptography
+  - cryptonite
 
 library:
   source-dirs: src
+  ghc-options:
+    -fwarn-tabs
+    -fwarn-incomplete-patterns
+    -fwarn-incomplete-uni-patterns
+    -fwarn-incomplete-record-updates
+    -fwarn-redundant-constraints
+    -fwarn-implicit-prelude
+    -fwarn-overflowed-literals
+    -fwarn-orphans
+    -fwarn-identities
+    -fwarn-dodgy-exports
+    -fwarn-dodgy-imports
+    -fwarn-duplicate-exports
+    -fwarn-overlapping-patterns
+    -fwarn-missing-fields
+    -fwarn-missing-methods
+    -fwarn-missing-signatures
+    -fwarn-noncanonical-monad-instances
+    -fwarn-unused-imports
+    -fwarn-unused-pattern-binds
+    -fwarn-unused-type-patterns
+    -fwarn-unrecognised-pragmas
+    -fwarn-wrong-do-bind
+    -fwarn-hi-shadowing
+    -fno-warn-name-shadowing
+    -fno-warn-unused-binds
+    -fno-warn-unused-matches
+    -fno-warn-unused-do-bind
+
+  default-extensions:
+    - LambdaCase
+    - RecordWildCards
+    - OverloadedStrings
+    - NoImplicitPrelude
+    - FlexibleInstances
+    - FlexibleContexts
+    - ScopedTypeVariables
+    - RankNTypes
+
+  exposed-modules:
+    - Script
+    - Delta
+    - Encoding
+    - Fixed
+    - Hash
+    - SafeInteger
+    - SafeString
+    - Utils
+    - Script.Analysis
+    - Script.Init
+    - Script.Storage
+    - Script.Pretty
+    - Script.Error
+    - Script.Eval
+    - Script.Prim
+    - Script.Token
+    - Script.Lexer
+    - Script.Parser
+    - Script.Compile
+    - Script.Typecheck
+    - Script.Duplicate
+    - Script.Undefinedness
+    - Script.Effect
+    - Script.WorkflowNet
+    - Script.ReachabilityGraph
+    - Script.Graphviz
+    - Script.Warning
 
 executables:
   fcl-repo-exe:
