--- a/package.yaml
+++ b/package.yaml
@@ -1,23 +1,17 @@
-name:                fcl-repo
+name:                fcl
 version:             0.1.0.0
-github:              "githubuser/fcl-repo"
-license:             BSD3
-author:              "Author name here"
-maintainer:          "example@example.com"
-copyright:           "2019 Author name here"
+github:              adjoint-io/fcl
+license:             Apache
+author:              "Adjoint Inc."
+maintainer:          "stephen@adjoint.io"
+category:            Compiler
+copyright:           "2016-2019 Adjoint Inc."
 
 extra-source-files:
 - README.md
 - ChangeLog.md
 
-# Metadata used when publishing your package
-# synopsis:            Short description of your package
-# category:            Web
-
-# To avoid duplicated efforts in documentation and dealing with the
-# complications of embedding Haddock markup inside cabal files, it is
-# common to point users to the README.md file.
-description:         Please see the README on GitHub at <https://github.com/githubuser/fcl-repo#readme>
+description:         Financial Core Language compiler
 
 dependencies:
   - base >= 4.12 && < 5
@@ -151,7 +145,7 @@ library:
     - Script.WorkflowNet
 
 executables:
-  fcl-repo-exe:
+  fcl-exe:
     main:                Main.hs
     source-dirs:         app
     ghc-options:
@@ -159,10 +153,10 @@ executables:
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
-    - fcl-repo
+    - fcl
 
 tests:
-  fcl-repo-test:
+  fcl-test:
     main:                Spec.hs
     source-dirs:         test
     ghc-options:
@@ -170,4 +164,4 @@ tests:
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
-    - fcl-repo
+    - fcl
