--- a/package.yaml
+++ b/package.yaml
@@ -150,29 +150,30 @@ library:
     - Language.FCL.World
     - Language.FCL.Warning
 
-# executables:
-#   fcl-exe:
-#     main:                Main.hs
-#     source-dirs:         app
-#     ghc-options:
-#     - -threaded
-#     - -rtsopts
-#     - -with-rtsopts=-N
-#     default-extensions:
-#     - LambdaCase
-#     - RecordWildCards
-#     - OverloadedStrings
-#     - NoImplicitPrelude
-#     - FlexibleInstances
-#     - FlexibleContexts
-#     - ScopedTypeVariables
-#     - RankNTypes
-#     dependencies:
-#     - fcl
-#     - optparse-applicative
+executables:
+  fcl:
+    main:                Main.hs
+    source-dirs:         exe
+    ghc-options:
+    - -threaded
+    - -rtsopts
+    - -with-rtsopts=-N
+    default-extensions:
+    - LambdaCase
+    - RecordWildCards
+    - OverloadedStrings
+    - NoImplicitPrelude
+    - FlexibleInstances
+    - FlexibleContexts
+    - ScopedTypeVariables
+    - RankNTypes
+    dependencies:
+    - fcl
+    - optparse-applicative
+    - aeson-pretty
 
 tests:
-  fcl-repo-test:
+  fcl-test:
     main:                Main.hs
     source-dirs:         tests
     default-extensions:
