--- a/stack.yaml
+++ b/stack.yaml
@@ -34,15 +34,14 @@ resolver: lts-13.11
 #  - wai
 packages:
 - .
-- location:
-    git: https://github.com/adjoint-io/datetime.git
-    commit: 7f7a0d3c20a35dc71d530fd04a2e4959923d7d1e
-  extra-dep: true
+
 # Dependency packages to be pulled from upstream that are not in the resolver
 # using the same syntax as the packages field.
 # (e.g., acme-missiles-0.3)
 extra-deps:
 - base58-bytestring-0.1.0
+- git: https://github.com/adjoint-io/datetime.git
+  commit: 7f7a0d3c20a35dc71d530fd04a2e4959923d7d1e
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
