Add servant api

--- a/package.yaml
+++ b/package.yaml
@@ -34,6 +34,45 @@ dependencies:
   # Text
   - bytestring
 
+ghc-options:
+  -fwarn-tabs
+  -fwarn-incomplete-patterns
+  -fwarn-incomplete-uni-patterns
+  -fwarn-incomplete-record-updates
+  -fwarn-redundant-constraints
+  -fwarn-implicit-prelude
+  -fwarn-overflowed-literals
+  -fwarn-orphans
+  -fwarn-identities
+  -fwarn-dodgy-exports
+  -fwarn-dodgy-imports
+  -fwarn-duplicate-exports
+  -fwarn-overlapping-patterns
+  -fwarn-missing-fields
+  -fwarn-missing-methods
+  -fwarn-missing-signatures
+  -fwarn-noncanonical-monad-instances
+  -fwarn-unused-imports
+  -fwarn-unused-pattern-binds
+  -fwarn-unused-type-patterns
+  -fwarn-unrecognised-pragmas
+  -fwarn-wrong-do-bind
+  -fwarn-hi-shadowing
+  -fno-warn-name-shadowing
+  -fno-warn-unused-binds
+  -fno-warn-unused-matches
+  -fno-warn-unused-do-bind
+
+default-extensions:
+  - LambdaCase
+  - RecordWildCards
+  - OverloadedStrings
+  - NoImplicitPrelude
+  - FlexibleInstances
+  - FlexibleContexts
+  - ScopedTypeVariables
+  - RankNTypes
+
 library:
   source-dirs: src
   dependencies:
@@ -73,44 +112,6 @@ library:
   - asn1-types
   - asn1-encoding
   - arithmoi
-  ghc-options:
-    -fwarn-tabs
-    -fwarn-incomplete-patterns
-    -fwarn-incomplete-uni-patterns
-    -fwarn-incomplete-record-updates
-    -fwarn-redundant-constraints
-    -fwarn-implicit-prelude
-    -fwarn-overflowed-literals
-    -fwarn-orphans
-    -fwarn-identities
-    -fwarn-dodgy-exports
-    -fwarn-dodgy-imports
-    -fwarn-duplicate-exports
-    -fwarn-overlapping-patterns
-    -fwarn-missing-fields
-    -fwarn-missing-methods
-    -fwarn-missing-signatures
-    -fwarn-noncanonical-monad-instances
-    -fwarn-unused-imports
-    -fwarn-unused-pattern-binds
-    -fwarn-unused-type-patterns
-    -fwarn-unrecognised-pragmas
-    -fwarn-wrong-do-bind
-    -fwarn-hi-shadowing
-    -fno-warn-name-shadowing
-    -fno-warn-unused-binds
-    -fno-warn-unused-matches
-    -fno-warn-unused-do-bind
-
-  default-extensions:
-    - LambdaCase
-    - RecordWildCards
-    - OverloadedStrings
-    - NoImplicitPrelude
-    - FlexibleInstances
-    - FlexibleContexts
-    - ScopedTypeVariables
-    - RankNTypes
 
   exposed-modules:
     - Language.FCL.Contract
@@ -159,15 +160,6 @@ executables:
     - -threaded
     - -rtsopts
     - -with-rtsopts=-N
-    default-extensions:
-    - LambdaCase
-    - RecordWildCards
-    - OverloadedStrings
-    - NoImplicitPrelude
-    - FlexibleInstances
-    - FlexibleContexts
-    - ScopedTypeVariables
-    - RankNTypes
     dependencies:
     - fcl
     - optparse-applicative
@@ -180,34 +172,50 @@ executables:
     - -threaded
     - -rtsopts
     - -with-rtsopts=-N
-    default-extensions:
-    - LambdaCase
-    - RecordWildCards
-    - OverloadedStrings
-    - NoImplicitPrelude
-    - FlexibleInstances
-    - FlexibleContexts
-    - ScopedTypeVariables
-    - RankNTypes
     dependencies:
     - fcl
     - wai-logger
     - scotty
     - aeson
+    - swagger2
+    - lens
 
+  fcl-swagger:
+    main: Main.hs
+    source-dirs: swagger
+    ghc-options:
+    - -threaded
+    - -rtsopts
+    - -with-rtsopts=-N
+    dependencies:
+    - fcl
+    - wai-logger
+    - scotty
+    - aeson
+    - swagger2
+    - lens
+
+  fcl-api:
+    main: Main.hs
+    source-dirs: api
+    ghc-options:
+    - -threaded
+    - -rtsopts
+    - -with-rtsopts=-N
+    dependencies:
+    - fcl
+    - warp
+    - wai
+    - aeson
+    - swagger2
+    - servant
+    - servant-swagger
+    - servant-swagger-ui
+    - servant-server
 tests:
   fcl-test:
     main:                Main.hs
     source-dirs:         tests
-    default-extensions:
-    - LambdaCase
-    - RecordWildCards
-    - OverloadedStrings
-    - NoImplicitPrelude
-    - FlexibleInstances
-    - FlexibleContexts
-    - ScopedTypeVariables
-    - RankNTypes
     ghc-options:
     - -threaded
     - -rtsopts
