--- a/package.yaml
+++ b/package.yaml
@@ -41,7 +41,6 @@ library:
   - directory
   - filepath
   - unix
-  - array
   - pretty-show
   - ansi-terminal
   - process-extras
@@ -67,12 +66,12 @@ library:
 
   # Cryptography
   - cryptonite
-  - memory
+  - arithmoi
   - pem
   - x509
   - asn1-types
   - asn1-encoding
-  - arithmoi
+
   ghc-options:
     -fwarn-tabs
     -fwarn-incomplete-patterns
@@ -101,6 +100,7 @@ library:
     -fno-warn-unused-binds
     -fno-warn-unused-matches
     -fno-warn-unused-do-bind
+    -Wmissing-export-lists
 
   default-extensions:
     - LambdaCase
