Stack install lzma

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -57,6 +57,8 @@ steps:
         --no-terminal \
         stylish-haskell hlint weeder
 
+      stack install lzma
+
       stack build \
         --no-terminal \
         --test \
