Change add to run

--- a/ci/Dockerfile
+++ b/ci/Dockerfile
@@ -2,7 +2,7 @@
 
 FROM haskell:8.6.3
 
-ADD sudo apt install liblzma-dev
+RUN apt install liblzma-dev
 
 # Install `gcloud` and `gsutil`
 ADD https://packages.cloud.google.com/apt/doc/apt-key.gpg google-apt-key.gpg
