--- a/package.yaml
+++ b/package.yaml
@@ -35,6 +35,8 @@ dependencies:
 
   # Serialization
   - binary
+  - cereal
+  - aeson
 
   # Date & Time
   - time
@@ -56,9 +58,7 @@ library:
   - process-extras
 
   # Serialization
-  - cereal
   - cereal-text
-  - aeson
   - pretty-hex
 
   # Exceptions
@@ -179,7 +179,6 @@ executables:
     - fcl
     - wai-logger
     - scotty
-    - aeson
 
 tests:
   fcl-test:
@@ -200,3 +199,4 @@ tests:
     - tasty-golden
     - tasty-quickcheck
     - QuickCheck
+    - aeson-pretty
