--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -50,6 +50,9 @@ steps:
     - |
       set -euxo pipefail
 
+      sudo apt update
+      sudo apt install install -y liblzma-dev
+
       stack config set system-ghc --global true
       stack config set install-ghc --global false
 
