--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -50,8 +50,8 @@ steps:
     - |
       set -euxo pipefail
 
-      sudo apt update
-      sudo apt install install -y liblzma-dev
+      apt update
+      apt install install -y liblzma-dev
 
       stack config set system-ghc --global true
       stack config set install-ghc --global false
