Added monad-gen to package

--- a/package.yaml
+++ b/package.yaml
@@ -67,6 +67,7 @@ library:
     # Control Structures
   - mtl
   - transformers
+  - monad-gen
 
   # Text
   - text
@@ -150,6 +151,7 @@ library:
     - Language.FCL.Unsafe
     - Language.FCL.Utils
     - Language.FCL.Time
+    - Language.FCL.WorkflowGen
     - Language.FCL.World
     - Language.FCL.Warning
     - Numeric.Lossless.Decimal
