--- a/stack.yaml
+++ b/stack.yaml
@@ -43,6 +43,8 @@ extra-deps:
 - git: https://github.com/adjoint-io/datetime.git
   commit: 7f7a0d3c20a35dc71d530fd04a2e4959923d7d1e
 
+- monad-gen-0.3.0.1@sha256:a2569465cfbd468d3350ef25de56b3362580e77537224313aab1210f40804a3b
+
 # Override default flag values for local packages and extra-deps
 # flags: {}
 
