Moved Debug printing to a seperate module

--- a/package.yaml
+++ b/package.yaml
@@ -123,6 +123,7 @@ library:
     - Language.FCL.Delta
     - Language.FCL.Init
     - Language.FCL.Storage
+    - Language.FCL.Debug
     - Language.FCL.Pretty
     - Language.FCL.Error
     - Language.FCL.Eval
