--- a/package.yaml
+++ b/package.yaml
@@ -99,6 +99,7 @@ library:
   - asn1-encoding
 
   ghc-options:
+    -Werror
     -fwarn-tabs
     -fwarn-incomplete-patterns
     -fwarn-incomplete-uni-patterns
