--- a/package.yaml
+++ b/package.yaml
@@ -150,9 +150,10 @@ library:
     - Language.FCL.Effect
     - Language.FCL.WorkflowNet
     - Language.FCL.Reachability.Definitions
-    - Language.FCL.Reachability.FreeChoice
     - Language.FCL.Reachability.General
     - Language.FCL.Reachability.Utils
+    - Language.FCL.Reachability.SplitAndMerge
+    - Language.FCL.Reachability.StructuredTransition
     - Language.FCL.Analysis
     - Language.FCL.Graphviz
     - Language.FCL.Hash
