--- a/package.yaml
+++ b/package.yaml
@@ -162,6 +162,7 @@ library:
     - Language.FCL.Reachability.SplitAndMerge
     - Language.FCL.Reachability.StructuredTransition
     - Language.FCL.SafeWorkflow
+    - Language.FCL.SafeWorkflow.Simple
     - Language.FCL.Analysis
     - Language.FCL.Graphviz
     - Language.FCL.Hash
