Added safe workflow editing DSL

--- a/package.yaml
+++ b/package.yaml
@@ -163,6 +163,7 @@ library:
     - Language.FCL.Reachability.SplitAndMerge
     - Language.FCL.Reachability.StructuredTransition
     - Language.FCL.SafeWorkflow
+    - Language.FCL.SafeWorkflow.DSL
     - Language.FCL.SafeWorkflow.Simple
     - Language.FCL.Analysis
     - Language.FCL.Graphviz
