--- a/package.yaml
+++ b/package.yaml
@@ -163,7 +163,7 @@ library:
     - Language.FCL.Reachability.SplitAndMerge
     - Language.FCL.Reachability.StructuredTransition
     - Language.FCL.SafeWorkflow
-    - Language.FCL.SafeWorkflow.DSL
+    - Language.FCL.SafeWorkflow.Editable
     - Language.FCL.SafeWorkflow.REPL
     - Language.FCL.SafeWorkflow.Simple
     - Language.FCL.Analysis
