--- a/package.yaml
+++ b/package.yaml
@@ -163,6 +163,7 @@ library:
     - Language.FCL.Reachability.SplitAndMerge
     - Language.FCL.Reachability.StructuredTransition
     - Language.FCL.SafeWorkflow
+    - Language.FCL.SafeWorkflow.CodeGen
     - Language.FCL.SafeWorkflow.Editable
     - Language.FCL.SafeWorkflow.REPL
     - Language.FCL.SafeWorkflow.Simple
