--- a/package.yaml
+++ b/package.yaml
@@ -65,6 +65,9 @@ dependencies:
   - servant-swagger-ui
   - swagger2
 
+  # Arithmetic
+  - rounded
+
 library:
   source-dirs: src
   dependencies:
