--- a/package.yaml
+++ b/package.yaml
@@ -186,6 +186,7 @@ library:
 
     - Numeric.Lossless.Decimal
     - Numeric.Lossless.Number
+    - Numeric.Lossy.Taylor
 
     - HTTP.FCL.API
     - HTTP.FCL.SwaggerSchema
